--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Page Title</title>
+<title>Akshay Shirude</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
@@ -135,7 +135,7 @@ body {
   <div class="side">
     <h2>About Me</h2>
     <p>Experienced Software Engineer with a demonstrated history of working in the computer software industry. Skilled in Data Structures, Algorithms, Data analytics and back-end programming technologies C#, NodeJS, SQL. Exploring Machine Learning techniques with Python.</p>
-   
+   </div>
 </div>
 
 
